Fix issue with item having text too long. Updated snapshot test due to this change

--- a/styles/carousel/carousel.css
+++ b/styles/carousel/carousel.css
@@ -1,5 +1,5 @@
 .slds-carousel__content {
-	height: 100%;
+	height: auto;
 }
 
 .slds-carousel__button[disabled] {
